--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
         .card { background: var(--card); padding: 30px; border-radius: 24px; box-shadow: 0 10px 25px -5px rgba(0,0,0,0.05); border: 1px solid rgba(255,255,255,0.7); }
         .header { text-align: center; margin-bottom: 20px; }
         .header img { width: 100px; height: auto; margin-bottom: 10px; }
-        .header h2 { color: var(--primary); font-size: 1.1rem; margin: 0; font-weight: 800; text-transform: uppercase; }
+        .header h2 { color: var(--primary); font-size: 1.1rem; margin: 0; font-weight: 800; text-transform: uppercase; line-height: 1.4; }
         .alert-info { background: #eff6ff; border: 1px solid #bfdbfe; color: #1e40af; padding: 12px; border-radius: 12px; font-size: 0.7rem; font-weight: 700; margin-bottom: 20px; text-align: center; }
         label { display: block; margin-top: 15px; font-weight: 600; font-size: 0.8rem; color: #64748b; text-transform: uppercase; }
         select, input, textarea { width: 100%; padding: 14px; margin-top: 6px; border: 2px solid #e2e8f0; border-radius: 12px; box-sizing: border-box; font-size: 1rem; background: #f8fafc; font-family: inherit; }
         .slot-grid { display: grid; grid-template-columns: repeat(2, 1fr); gap: 10px; margin-top: 10px; }
         .slot-card { background: white; border: 2px solid #e2e8f0; padding: 12px; border-radius: 14px; display: flex; flex-direction: column; cursor: pointer; transition: 0.2s; }
-        .slot-card.selected { border-color: var(--primary); background: #eff6ff; }
+        .slot-card.selected { border-color: var(--primary); background: #eff6ff; box-shadow: 0 0 0 1px var(--primary); }
         .slot-card.booked { background: #fff1f2; border-color: #fecdd3; cursor: not-allowed; opacity: 0.7; }
         .slot-time { font-weight: 800; font-size: 0.9rem; color: #334155; }
         .slot-range { font-size: 0.7rem; color: #64748b; }
@@ -26,7 +26,8 @@
         .nilam-bm { background: #dcfce7; color: #166534; border: 1px solid #bbf7d0; }
         .nilam-bi { background: #fef9c3; color: #854d0e; border: 1px solid #fef08a; }
         button#submitBtn { width: 100%; padding: 16px; background: var(--primary); color: white; border: none; border-radius: 16px; margin-top: 25px; cursor: pointer; font-weight: 700; font-size: 1rem; }
-        .booking-item { background: white; border-radius: 18px; padding: 15px; margin-bottom: 12px; border: 1px solid #f1f5f9; }
+        .booking-item { background: white; border-radius: 18px; padding: 15px; margin-bottom: 12px; border: 1px solid #f1f5f9; box-shadow: 0 4px 6px -1px rgba(0,0,0,0.05); }
+        .btn-delete { background: #fff1f2; color: #e11d48; border: none; padding: 8px 14px; font-size: 0.7rem; border-radius: 10px; font-weight: 700; cursor: pointer; margin-top: 10px; }
     </style>
 </head>
 <body>
@@ -36,11 +37,11 @@
             <img src="https://drive.google.com/uc?export=view&id=1jvQNnrcg0lnnOIX4kh4MChC1M4rYbyGg" alt="Logo SK Clifford">
             <h2>SISTEM TEMPAHAN BILIK KHAS 2026</h2>
         </div>
-        <div class="alert-info">⚠️ MAKSIMUM 3 SLOT | PENGGILIRAN NILAM DENGAN KELAS</div>
+        <div class="alert-info">⚠️ MAKSIMUM 3 SLOT | PENGGILIRAN NILAM AUTOMATIK</div>
         <form id="tempahanForm">
             <label>Nama Guru</label>
             <select id="namaGuru" required>
-                <option value="">-- Pilih Nama (43 Orang) --</option>
+                <option value="">-- Pilih Nama Guru --</option>
                 <option value="ROHADI BIN KAMALUDIN">ROHADI BIN KAMALUDIN</option>
                 <option value="LUKMAN HAKIM BIN ABDULLAH">LUKMAN HAKIM BIN ABDULLAH</option>
                 <option value="JAMILAH BINTI LUDIN">JAMILAH BINTI LUDIN</option>
@@ -96,9 +97,9 @@
             <input type="date" id="tarikh" onchange="kemaskiniSlot()" required>
             <div id="slotGrid" class="slot-grid"></div>
             <label>Tempahan Selepas Sekolah / Catatan</label>
-            <textarea id="catatan" rows="2"></textarea>
+            <textarea id="catatan" rows="2" placeholder="Contoh: Mesyuarat (2.30 - 4.30 ptg)"></textarea>
             <label>Tujuan / Kelas (WAJIB)</label>
-            <input type="text" id="tujuan" required>
+            <input type="text" id="tujuan" placeholder="Cth: PdPC Sains 5K / NILAM" required>
             <button type="button" id="submitBtn" onclick="hantar()">HANTAR TEMPAHAN</button>
         </form>
         <div id="senaraiTempahan" style="margin-top: 30px;"></div>
@@ -109,28 +110,12 @@
     let dataTempahan = [];
     const jadualMasa = { 1: "07:35", 2: "08:05", 3: "08:35", 4: "09:05", 5: "09:35", 6: "10:05", 7: "10:35", 8: "11:05", 9: "11:35", 10: "12:05", 11: "12:35", 12: "01:05" };
     
-    // DATA NILAM DENGAN NAMA KELAS
     const nilamFull = {
-        'Monday': {
-            bm: { 5:'3A', 6:'1A', 7:'4A', 8:'6E', 10:'4K', 11:'6K' },
-            bi: { 4:'5K', 5:'2E', 8:'2A', 9:'4K', 10:'1A', 11:'6K' }
-        },
-        'Tuesday': {
-            bm: { 1:'6A', 2:'5E', 6:'5A', 7:'3K', 9:'2A', 10:'2E', 11:'3E', 12:'1K' },
-            bi: { 2:'3E', 3:'5A', 5:'1K', 6:'6A', 7:'5E', 8:'3A', 10:'3K', 11:'4A' }
-        },
-        'Wednesday': {
-            bm: { 1:'4E', 2:'2K', 3:'4K', 4:'5K', 5:'6K', 6:'3A', 7:'4A', 8:'6E', 9:'1A', 10:'2A' },
-            bi: { 4:'4E', 5:'6E', 6:'2K', 7:'3E', 9:'1K', 10:'1A' }
-        },
-        'Thursday': {
-            bm: { 1:'5E', 2:'3K', 5:'1K', 6:'2E', 10:'4E', 11:'2K' },
-            bi: { 3:'3K', 4:'2A', 5:'5K', 6:'2E', 7:'4E', 8:'2K', 9:'6A', 10:'5A' }
-        },
-        'Friday': {
-            bm: { 3:'6A', 4:'5A', 5:'4E', 6:'2K', 7:'3E', 8:'1K' },
-            bi: { 2:'2K', 3:'4K', 4:'1A', 5:'6K', 6:'3A', 7:'4A', 8:'6E', 9:'2A' }
-        }
+        'Monday': { bm: { 5:'3A', 6:'1A', 7:'4A', 8:'6E', 10:'4K', 11:'6K' }, bi: { 4:'5K', 5:'2E', 8:'2A', 9:'4K', 10:'1A', 11:'6K' } },
+        'Tuesday': { bm: { 1:'6A', 2:'5E', 6:'5A', 7:'3K', 9:'2A', 10:'2E', 11:'3E', 12:'1K' }, bi: { 2:'3E', 3:'5A', 5:'1K', 6:'6A', 7:'5E', 8:'3A', 10:'3K', 11:'4A' } },
+        'Wednesday': { bm: { 1:'4E', 2:'2K', 3:'4K', 4:'5K', 5:'6K', 6:'3A', 7:'4A', 8:'6E', 9:'1A', 10:'2A' }, bi: { 4:'4E', 5:'6E', 6:'2K', 7:'3E', 9:'1K', 10:'1A' } },
+        'Thursday': { bm: { 1:'5E', 2:'3K', 5:'1K', 6:'2E', 10:'4E', 11:'2K' }, bi: { 3:'3K', 4:'2A', 5:'5K', 6:'2E', 7:'4E', 8:'2K', 9:'6A', 10:'5A' } },
+        'Friday': { bm: { 3:'6A', 4:'5A', 5:'4E', 6:'2K', 7:'3E', 8:'1K' }, bi: { 2:'2K', 3:'4K', 4:'1A', 5:'6K', 6:'3A', 7:'4A', 8:'6E', 9:'2A' } }
     };
 
     function getWeekNumber(d) {
@@ -145,8 +130,9 @@
             dataTempahan = await res.json();
             const div = document.getElementById('senaraiTempahan');
             div.innerHTML = "";
-            dataTempahan.slice().reverse().forEach(item => {
-                div.innerHTML += `<div class="booking-item"><strong>${item.tarikh}</strong> - ${item.bilik}<br>${item.nama}<br><small>${item.waktu}</small><br><em>${item.tujuan}</em></div>`;
+            dataTempahan.slice().reverse().forEach((item, index) => {
+                const realIndex = dataTempahan.length - 1 - index;
+                div.innerHTML += `<div class="booking-item"><strong>${item.tarikh}</strong> - ${item.bilik}<br>${item.nama}<br><small>${item.waktu}</small><br><em>${item.tujuan}</em><br><button class="btn-delete" onclick="batalTempahan(${realIndex})">BATAL</button></div>`;
             });
         } catch (e) {}
     }
@@ -156,18 +142,15 @@
         const tarikhVal = document.getElementById('tarikh').value;
         const container = document.getElementById('slotGrid');
         if (!bilik || !tarikhVal) return;
-
         const date = new Date(tarikhVal);
         const dayName = date.toLocaleDateString('en-US', { weekday: 'long' });
         const weekNum = getWeekNumber(date);
         const isGanjil = weekNum % 2 !== 0;
         const slotDitempah = dataTempahan.filter(t => t.tarikh.includes(tarikhVal) && t.bilik === bilik).flatMap(t => String(t.waktu).split(", "));
-
         container.innerHTML = "";
         for (let i = 1; i <= 12; i++) {
             const val = `Waktu ${i}`;
             const isBooked = slotDitempah.includes(val);
-            
             let tagHTML = "";
             if (bilik === "Makmal Komputer") {
                 if (isGanjil && nilamFull[dayName]?.bm[i]) tagHTML = `<span class="nilam-tag nilam-bm">NILAM BM (${nilamFull[dayName].bm[i]})</span>`;
@@ -176,14 +159,13 @@
                 if (isGanjil && nilamFull[dayName]?.bi[i]) tagHTML = `<span class="nilam-tag nilam-bi">NILAM BI (${nilamFull[dayName].bi[i]})</span>`;
                 else if (!isGanjil && nilamFull[dayName]?.bm[i]) tagHTML = `<span class="nilam-tag nilam-bm">NILAM BM (${nilamFull[dayName].bm[i]})</span>`;
             }
-
             const div = document.createElement('div');
             div.className = `slot-card ${isBooked ? 'booked' : ''}`;
-            div.innerHTML = `<span class="slot-time">Waktu ${i}</span><span class="slot-range">${jadualMasa[i]}</span>${tagHTML}`;
+            div.innerHTML = `<span class="slot-time">Waktu ${i}</span><span class="slot-range">${jadualMasa[i]}</span>${tagHTML}${isBooked ? '<br><span style="color:red;font-size:0.6rem;font-weight:bold;">DITEMPAH</span>' : ''}`;
             if(!isBooked) {
                 div.onclick = () => {
                     const selected = container.querySelectorAll('.selected').length;
-                    if (!div.classList.contains('selected') && selected >= 3) { alert("Maksimum 3 slot!"); return; }
+                    if (!div.classList.contains('selected') && selected >= 3) { alert("Maksimum 3 slot sahaja!"); return; }
                     div.classList.toggle('selected');
                 };
             }
@@ -193,18 +175,28 @@
 
     function hantar() {
         const selected = Array.from(document.querySelectorAll('.slot-card.selected .slot-time')).map(el => el.innerText);
-        if (selected.length === 0 || !document.getElementById('tujuan').value) { alert("Lengkapkan maklumat!"); return; }
+        const tujuan = document.getElementById('tujuan').value.trim();
+        if (selected.length === 0 || tujuan === "") { alert("Pilih slot dan isi Tujuan!"); return; }
         const btn = document.getElementById('submitBtn');
-        btn.disabled = true; btn.innerText = "Hantar...";
+        btn.disabled = true; btn.innerText = "Menghantar...";
         const payload = { 
             nama: document.getElementById('namaGuru').value, 
             bilik: document.getElementById('bilik').value, 
             tarikh: document.getElementById('tarikh').value, 
-            tujuan: document.getElementById('tujuan').value, 
+            tujuan: tujuan, 
             waktu: selected.join(", "), 
             catatan: document.getElementById('catatan').value 
         };
         fetch(scriptURL, { method: 'POST', mode: 'no-cors', body: JSON.stringify(payload) }).then(() => location.reload());
+    }
+
+    async function batalTempahan(rowIdx) {
+        if (prompt("Masukkan Kata Laluan Admin:") === "admin2026") {
+            if (confirm("Adakah anda pasti mahu membatalkan tempahan ini?")) {
+                await fetch(`${scriptURL}?action=delete&row=${rowIdx + 2}`, { method: 'POST', mode: 'no-cors' });
+                location.reload();
+            }
+        } else { alert("Kata laluan salah!"); }
     }
     window.onload = muatSenarai;
 </script>
