--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         .container { max-width: 500px; margin: auto; }
         .card { background: var(--card); padding: 30px; border-radius: 24px; box-shadow: 0 10px 25px -5px rgba(0,0,0,0.05); border: 1px solid rgba(255,255,255,0.7); }
         .header { text-align: center; margin-bottom: 20px; }
-        .header img { width: 100px; height: auto; margin-bottom: 10px; }
+        .header img { width: 120px; height: auto; margin-bottom: 10px; }
         .header h2 { color: var(--primary); font-size: 1.1rem; margin: 0; font-weight: 800; text-transform: uppercase; line-height: 1.4; }
         .alert-info { background: #eff6ff; border: 1px solid #bfdbfe; color: #1e40af; padding: 12px; border-radius: 12px; font-size: 0.7rem; font-weight: 700; margin-bottom: 20px; text-align: center; }
         label { display: block; margin-top: 15px; font-weight: 600; font-size: 0.8rem; color: #64748b; text-transform: uppercase; }
@@ -35,14 +35,14 @@
 <div class="container">
     <div class="card">
         <div class="header">
-            <img src="https://drive.google.com/uc?export=view&id=1jvQNnrcg0lnnOIX4kh4MChC1M4rYbyGg" alt="Logo">
-            <h2>SISTEM TEMPAHAN BILIK KHAS 2026</h2>
+            <img src="https://upload.wikimedia.org/wikipedia/ms/3/3d/Logo_SK_Clifford.png" alt="Logo SK Clifford">
+            <h2>SISTEM TEMPAHAN BILIK KHAS SK CLIFFORD 2026</h2>
         </div>
         <div class="alert-info">⚠️ MAKSIMUM 3 SLOT | PENGGILIRAN NILAM AUTOMATIK</div>
         <form id="tempahanForm">
             <label>Nama Guru</label>
             <select id="namaGuru" required>
-                <option value="">-- Pilih Nama Guru (43 Orang) --</option>
+                <option value="">-- Pilih Nama Guru --</option>
                 <option value="ROHADI BIN KAMALUDIN">ROHADI BIN KAMALUDIN</option>
                 <option value="LUKMAN HAKIM BIN ABDULLAH">LUKMAN HAKIM BIN ABDULLAH</option>
                 <option value="JAMILAH BINTI LUDIN">JAMILAH BINTI LUDIN</option>
@@ -113,12 +113,13 @@
     const jadualMasa = { 1: "07:35", 2: "08:05", 3: "08:35", 4: "09:05", 5: "09:35", 6: "10:05", 7: "10:35", 8: "11:05", 9: "11:35", 10: "12:05", 11: "12:35", 12: "01:05" };
     const hariMs = { 'Monday': 'ISNIN', 'Tuesday': 'SELASA', 'Wednesday': 'RABU', 'Thursday': 'KHAMIS', 'Friday': 'JUMAAT', 'Saturday': 'SABTU', 'Sunday': 'AHAD' };
     
+    // Data NILAM dari jadual yang dibekalkan (Cek mengikut hari/waktu)
     const nilamFull = {
-        'Monday': { bm: { 5:'3A', 6:'1A', 7:'4A', 8:'6E', 10:'4K', 11:'6K' }, bi: { 4:'5K', 5:'2E', 8:'2A', 9:'4K', 10:'1A', 11:'6K' } },
-        'Tuesday': { bm: { 1:'6A', 2:'5E', 6:'5A', 7:'3K', 9:'2A', 10:'2E', 11:'3E', 12:'1K' }, bi: { 2:'3E', 3:'5A', 5:'1K', 6:'6A', 7:'5E', 8:'3A', 10:'3K', 11:'4A' } },
-        'Wednesday': { bm: { 1:'4E', 2:'2K', 3:'4K', 4:'5K', 5:'6K', 6:'3A', 7:'4A', 8:'6E', 9:'1A', 10:'2A' }, bi: { 4:'4E', 5:'6E', 6:'2K', 7:'3E', 9:'1K', 10:'1A' } },
-        'Thursday': { bm: { 1:'5E', 2:'3K', 5:'1K', 6:'2E', 10:'4E', 11:'2K' }, bi: { 3:'3K', 4:'2A', 5:'5K', 6:'2E', 7:'4E', 8:'2K', 9:'6A', 10:'5A' } },
-        'Friday': { bm: { 3:'6A', 4:'5A', 5:'4E', 6:'2K', 7:'3E', 8:'1K' }, bi: { 2:'2K', 3:'4K', 4:'1A', 5:'6K', 6:'3A', 7:'4A', 8:'6E', 9:'2A' } }
+        'Monday': { bm: { 5:'3A', 6:'3A', 7:'1A', 8:'1A', 10:'4A', 11:'4A' }, bi: { 4:'5K', 5:'5K', 8:'2E', 9:'2E', 10:'2A', 11:'2A' } },
+        'Tuesday': { bm: { 1:'6E', 2:'6E', 6:'4K', 7:'4K', 9:'6K', 10:'6K', 11:'6A', 12:'6A' }, bi: { 2:'4K', 3:'4K', 5:'1A', 6:'1A', 7:'6K', 8:'6K', 10:'3E', 11:'3E' } },
+        'Wednesday': { bm: { 1:'4E', 2:'4E', 3:'2A', 4:'2A', 5:'3K', 6:'3K', 7:'5A', 8:'5A', 9:'1E', 10:'1E' }, bi: { 4:'5A', 5:'5A', 6:'4E', 7:'4E', 9:'3K', 10:'3K' } },
+        'Thursday': { bm: { 1:'2E', 2:'2E', 5:'1K', 6:'1K', 10:'5E', 11:'5E' }, bi: { 3:'4A', 4:'4A', 5:'3A', 6:'3A', 7:'5E', 8:'5E', 9:'1K', 10:'1K' } },
+        'Friday': { bm: { 3:'2K', 4:'2K', 5:'3E', 6:'3E', 7:'5K', 8:'5K' }, bi: { 2:'6A', 3:'6A', 4:'6E', 5:'6E', 6:'2K', 7:'2K', 8:'1E', 9:'1E' } }
     };
 
     function getWeekNumber(d) {
@@ -213,7 +214,7 @@
     }
 
     async function batalTempahan(idx) {
-        if (prompt("Kata Laluan Admin:") === "admin2026") {
+        if (prompt("Masukkan Kata Laluan Admin:") === "admin2026") {
             await fetch(`${scriptURL}?action=delete&row=${idx + 2}`, { method: 'POST', mode: 'no-cors' });
             location.reload();
         }
